--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/register": "^7.6.2",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-dva-hmr": "^0.4.2",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-lodash": "^3.3.4",
     "browser-sync": "^2.23.5",
